--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^5.19.1",
     "@slack/web-api": "^7.5.0",
     "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@eslint/js": "^9.11.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "@types/uuid": "^10.0.0",
